# tabla_sitar_seperation

./: .justfile  README.md  install.ps1  pyproject.toml  sep.py  sitar_tabla_separator.py
separated/htdemucs/input/project/tabla_sitar_seperation-main/: install.ps1  main.py  pyproject.toml
